Trying to fix scaling on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -245,8 +245,7 @@ body, html {
 }
 
 #profilePic {
-	height: 10vw;
-	width: 10vw;
+	height: 25%;
 	border-radius: 50%;
 	z-index: 100;
 	margin-top: 0px;
